--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
-    "lite-server": "^2.5.4"
-    
+    "lite-server": "^2.5.4",
+    "node-sass": "^4.14.1"
   },
   "scripts": {
     "start": "npm run lite",
     "lite": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -o css/ css/"
   },
   "repository": {
     "type": "git",
