--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "npm run lite",
     "lite": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass -o css/ css/"
+    "scss": "node-sass --watch CSS -o css"
   },
   "repository": {
     "type": "git",
